# Capstone-RECLAIM

./: .gitignore  MANUAL_TEST_GUIDE.md  README.md  export_matlab_figures.m  joint data.xlsx  launch-agents.sh  setup.sh  urdf measurements.xlsx
URDF Arm Model/: CMakeLists.txt  package.xml
URDF Arm Model/launch/: display.launch  gazebo.launch
URDF Arm Model/urdf/: URDF Arm Model.urdf
docs/: Camera_Placement_Plan.md  DRIVE_CHANGELOG.md  Navigation_Controls_Deep_Dive.md  Perception_Strategy.md  Teensy.md  navigation_deep_dive.md
docs/mic_snapshot_mar24/: camera_detect_trt.py  waste_tracker_trt.py
docs/product_pcb_electrical/: block_diagram.md  component_justification.md  netlist.md
docs/prototype_pcb_electrical/: netlist.md
docs/schematic_images/: FIGURE_CAPTIONS.md  WIRING_GUIDE.md
foxglove_arm/: reclaim_arm.urdf  reclaim_arm_fixed.urdf
foxglove_arm/meshes/: base_link.STL  environment.stl  (+2 more)
matlab_sims/: build_simulink_diagrams.m  reclaim_dc_motor_model.m  reclaim_full_run_sim.m  reclaim_path_comparison.m  reclaim_product_control.slx  reclaim_prototype_control.slx  reclaim_smoothing_pipeline.m  reclaim_velocity_profiles.m
reclaim_ws/src/reclaim_arm_moveit_config/: CMakeLists.txt
reclaim_ws/src/reclaim_arm_moveit_config/config/: ros2_controllers.yaml
reclaim_ws/src/reclaim_arm_moveit_config/launch/: move_group.launch.py
reclaim_ws/src/reclaim_arm_moveit_config/meshes/: shoulder_link.STL  tool0.STL
reclaim_ws/src/reclaim_arm_moveit_config/scripts/: load_planning_scene.py
reclaim_ws/src/reclaim_arm_moveit_config/srdf/: reclaim_arm.srdf
(+44 files in other folders)
